Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14139

missing endGroup() call in cmaketoolmanager.cpp

    XMLWordPrintable

Details

    • c8da2438ecccb24bcfcd69b34d09235c2b5743d1

    Description

      there is missing call to settings->endGroup() when bailing out from the readAndDeleteLegacyCMakeSettings() due to missing cmakeExecutable. Without the call all subsequent plugins place their settings under [CMakeSettings]

      Attached a patch suggesting a fix.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dt Daniel Teske
            phodju Petri Hodju
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes