CMakeSettings: Do not break most of other settings

Just do not return early, which then missed a settings->endGroup() call.
Fixes a regression introduced by
99e9643dea3871f26c5a09e4a1715ba84c9103e9

Change-Id: I102eb76e3381012cddb73c1132b6443dd2cd592f
Task-number: QTCREATORBUG-14139
Task-number: QTCREATORBUG-14140
Reviewed-by: Daniel Teske <daniel.teske@theqtcompany.com>